fix some spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,6 @@
 }
 
 html, body {
-  height: 100vh; 
   margin: 0; 
   padding: 0;
   background-color: var(--white);
@@ -24,11 +23,6 @@ html, body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-.content {
-  display: grid;
-  justify-content: center;
 }
 
 hr {
@@ -51,16 +45,16 @@ h2, h3 {
   background-color: white;
   padding: 2px 20px 30px 20px;
   border-radius: 12px;
-  -webkit-box-shadow: 0px 0px 0px 10px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    0px 0px 0px 10px #ccc;  /* Firefox 3.5 - 3.6 */
+  -webkit-box-shadow: 0px 0px 0px 10px #ccc;
+  -moz-box-shadow:    0px 0px 0px 10px #ccc;
   box-shadow: 5px 5px 5px #8a8a8a;
-  padding: 15px;
   display: grid;
   justify-content: center;
   align-content: center;
   grid-row: auto auto;
   margin: 20px 20px;
 }
+
 
 .centered {
   display: flex;
