--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -1,5 +1,6 @@
 .reviews {
     background-color: var(--blue);
+    width: 100%;
 }
 
 .actual-reviews {
@@ -11,8 +12,6 @@
 .review-header {
     color: var(--white);
     margin-left: 20px;
-    line-height: 0;
-    margin-top: 30px;
 }
 
 .review {
@@ -24,10 +23,4 @@
     width: 20px;
     margin: 0 0.05rem;
     height: auto;
-}
-
-@media (min-width: 640px) {
-    .actual-reviews {
-        grid-template-columns: auto auto auto;
-    }
 }
