--- a/styles/services.css
+++ b/styles/services.css
@@ -1,4 +1,7 @@
-
+.service {
+    display: grid;
+    justify-content: center;
+}
 
 .icon-circle {
     background-color: var(--blue);
@@ -6,10 +9,20 @@
     width: 200px;
     height: 200px;
     margin: 0 auto;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 5px solid var(--yellow)
+}
+
+.service-button {
+    margin-bottom: 10px;
+}
+
+.service-header {
+    margin-left: 20px;
+    margin-bottom: 0;
 }
 
 .service-icon.rake {
@@ -34,6 +47,12 @@
 .service-cards {
     display: grid;
     grid-template-columns: auto;
+    width: 100%;
+}
+
+.service-card {
+    padding: 5px;
+    width: 300px;
 }
 
 .service-title {
@@ -57,8 +76,13 @@ p.service-description {
     border-top: 1px solid #ccc;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 800px) {
     .service-cards {
         grid-template-columns: auto auto auto;
+        width: 100%;
+    }
+
+    .service-card {
+        width: auto;
     }
 }
